tempfile/bon/tests/integration/ui/compile_fail/attr_field.stderr
error: field names starting with `__` are reserved for `bon`'s internal use; please, select a different name
 --> tests/integration/ui/compile_fail/attr_field.rs:6:5
  |
6 |     __x1: i32,
  |     ^^^^
